<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:summary="@string/preference_header_login_summary"
        android:title="@string/preference_header_login_summary" >
        <EditTextPreference
            android:title="@string/preference_host_title"
            android:key="@string/preference_host_key"
            android:summary="@string/preference_host_summary" />
        <EditTextPreference
            android:title="@string/preference_username_title"
            android:key="@string/preference_username_key"
            android:summary="@string/preference_username_summary" />
        <EditTextPreference
            android:title="@string/preference_password_title"
            android:key="@string/preference_password_key"
            android:summary="@string/preference_password_summary" />
    </PreferenceCategory>



</PreferenceScreen>