<?xml version="1.0" encoding="utf-8"?>

<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- vollständiger Name zur activity -->
    <header
        android:fragment="de.projekteanderschule.weinert.ltbcontrol.Preferences_Fragment_Mail"
        android:title="@string/preference_header_login_title"
        android:summary="@string/preference_header_login_summary" />

    <header
        android:fragment="de.projekteanderschule.weinert.ltbcontrol.Preferences_Fragment_AutoCheck"
        android:title="@string/preference_header_autocheck_title"
        android:summary="@string/preference_header_autocheck_summary" />
    <header
        android:fragment="de.projekteanderschule.weinert.ltbcontrol.Preferences_Fragment_Test3"
        android:title="@string/preference_header_line3_title"
        android:summary="@string/preference_header_line3_summary" />
    <header
        android:fragment="de.projekteanderschule.weinert.ltbcontrol.Preferences_Fragment_Test4"
        android:title="@string/preference_header_line4_title"
        android:summary="@string/preference_header_line4_summary" />
    <header
        android:fragment="de.projekteanderschule.weinert.ltbcontrol.Preferences_Fragment_Test5"
        android:title="@string/preference_header_line5_title"
        android:summary="@string/preference_header_line5_summary" />


</preference-headers>